--- a/动态表单及动态建表实现原理.md
+++ b/动态表单及动态建表实现原理.md
@@ -3,7 +3,9 @@
   1 应用场景
  项目中往往需要动态的创建一个表单，或者添加一个新的数据模板，这时候因为需要在运行时动态的创建表以及动态的维护表字段甚至表关系 使得普通java解决方案变得困难重重。 
 
-  2 实现工具Hibernate + Spring + Groovy +FreemarkerHibernate 作用很简单负责创建数据库表这样可以避免我们自己去写复杂的sql和判断。Spring 作为桥梁起到连接纽带的作用。Groovy做为动态语言，在项目运行时根据模板创建访问数据库，或者控制层代码。Freamker 可以根据提前定义好的模板生成 hibernate配置文件，以及Groovy代码。   3 实现原理 首先创建Form 和 FromAttribute 两张表关系一对多。Form表记录表单的名称，类别，甚至是作为在动态生成表单时的css样式信息。FromAttribute记录表单字段信息，如名称，类别等。有了表单以及表单项的信息后就可以创建数据库表了。测试代码：
+  2 实现工具Hibernate + Spring + Groovy +FreemarkerHibernate 作用很简单负责创建数据库表这样可以避免我们自己去写复杂的sql和判断。Spring 作为桥梁起到连接纽带的作用。Groovy做为动态语言，在项目运行时根据模板创建访问数据库，或者控制层代码。Freamker 可以根据提前定义好的模板生成 hibernate配置文件，以及Groovy代码。   
+  
+  3 实现原理 首先创建Form 和 FromAttribute 两张表关系一对多。Form表记录表单的名称，类别，甚至是作为在动态生成表单时的css样式信息。FromAttribute记录表单字段信息，如名称，类别等。有了表单以及表单项的信息后就可以创建数据库表了。测试代码：
   
   
 ![img](http://www.blogjava.net/Images/OutliningIndicators/ExpandedBlockStart.gif)public void testGenerator() {
